--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,14 +29,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Install VirtualBox
-        run: |
-          brew update
-          brew upgrade virtualbox
-      - name: Install Chef
-        uses: actionshub/chef-install@3.0.1
-      - name: Kitchen Converge
-        uses: actionshub/test-kitchen@2.1.0
+      - uses: ./.github/actions/kitchen-test
         with:
           suite: firewalld
           os: ${{ matrix.os }}
@@ -54,14 +47,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Install VirtualBox
-        run: |
-          brew update
-          brew upgrade virtualbox
-      - name: Install Chef
-        uses: actionshub/chef-install@3.0.1
-      - name: Kitchen Converge
-        uses: actionshub/test-kitchen@2.1.0
+      - uses: ./.github/actions/kitchen-test
         with:
           suite: iptables
           os: ${{ matrix.os }}
@@ -78,17 +64,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Install Chef
-        uses: actionshub/chef-install@3.0.1
-      - name: Install VirtualBox
-        run: |
-          brew update
-          brew upgrade virtualbox
-      - name: Kitchen Converge
-        uses: actionshub/test-kitchen@2.1.0
-        env:
-          CHEF_LICENSE: accept-no-persist
-          KITCHEN_LOCAL_YAML: kitchen.dokken.yml
+      - uses: ./.github/actions/kitchen-test
         with:
           suite: ufw
           os: ${{ matrix.os }}
@@ -105,14 +81,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Install Chef
-        uses: actionshub/chef-install@3.0.1
-      - name: Install VirtualBox
-        run: |
-          brew update
-          brew upgrade virtualbox
-      - name: Kitchen Converge
-        uses: actionshub/test-kitchen@2.1.0
+      - uses: ./.github/actions/kitchen-test
         with:
           suite: nftables
           os: ${{ matrix.os }}
@@ -129,14 +98,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Install Chef
-        uses: actionshub/chef-install@3.0.1
-      - name: Install VirtualBox
-        run: |
-          brew update
-          brew upgrade virtualbox
-      - name: Kitchen Converge
-        uses: actionshub/test-kitchen@2.1.0
+      - uses: ./.github/actions/kitchen-test
         with:
           suite: firewalld-dbus
           os: ${{ matrix.os }}
