--- a/kitchen.yml
+++ b/kitchen.yml
@@ -34,6 +34,8 @@ platforms:
   - name: oracle-8
   - name: ubuntu-18.04
   - name: ubuntu-20.04
+  - name: ubuntu-22.04
+  - name: ubuntu-24.04
   - name: windows-2016
     driver_config:
       box: tas50/windows_2016
@@ -49,11 +51,9 @@ suites:
 
   - name: firewalld
     excludes:
-      - almalinux-8
-      - centos-8
       - debian-9
       - debian-10
-      - oracle-8
+      - debian-11
       - ubuntu-18.04
       - ubuntu-20.04
       - windows-2016
@@ -67,10 +67,9 @@ suites:
       - almalinux-8
       - amazonlinux-2
       - centos-7
-      - centos-8
+      - centos-stream-8
+      - fedora-34
       - fedora-latest
-      - freebsd-11
-      - freebsd-12
       - opensuse-leap-15
       - oracle-8
       - windows-2016
@@ -83,9 +82,7 @@ suites:
     excludes:
       - debian-9
       - debian-10
-      - oracle-8
-      - ubuntu-18.04
-      - ubuntu-20.04
+      - debian-11
       - windows-2016
       - windows-2019
     run_list:
