--- a/kitchen.dokken.yml
+++ b/kitchen.dokken.yml
@@ -57,12 +57,12 @@ platforms:
       image: dokken/opensuse-leap-15
       pid_one_command: /usr/lib/systemd/systemd
 
-  - name: oraclelinux-8
+  - name: oracle-8
     driver:
       image: dokken/oraclelinux-8
       pid_one_command: /usr/lib/systemd/systemd
 
-  - name: oraclelinux-9
+  - name: oracle-9
     driver:
       image: dokken/oraclelinux-9
       pid_one_command: /usr/lib/systemd/systemd
