Disable Oracle 9 iptables test, its iptables package fails to install
Signed-off-by: Joseph Larionov <jlarionov@webmd.net>

--- a/kitchen.yml
+++ b/kitchen.yml
@@ -86,6 +86,7 @@ suites:
 
   - name: iptables
     excludes:
+      - oracle-9 # iptables fails to install from Oracle repo
       - opensuse-leap-15
       - windows-2016
       - windows-2019
