--- a/kitchen.dokken.yml
+++ b/kitchen.dokken.yml
@@ -1,7 +1,9 @@
 driver:
   name: dokken
   privileged: true
-  chef_version: <%= ENV['CHEF_VERSION'] || 'current' %>
+  # Latest Chef container (18.6.2) is broken: https://github.com/chef/chef/issues/14760
+  # chef_version: <%= ENV['CHEF_VERSION'] || 'current' %>
+  chef_version: '18.3'
   intermediate_instructions:
     - | # Need to set "IPv6_rpfilter=no" otherwise firewalld won't start inside Docker container
         RUN mkdir -p /etc/firewalld && \
