Improve firewalld support (#304)
* Remove FreeBSD from Test Kitchen; it's not supported by this cookbook

Signed-off-by: Joseph Larionov <jlarionov@webmd.net>

* Correct the suite platform matrix in Test Kitchen

Suites now correctly test against all compatible platforms for each
firewall solution.

Signed-off-by: Joseph Larionov <jlarionov@webmd.net>

* Add modern platforms and remove obsolete ones

Signed-off-by: Joseph Larionov <jlarionov@webmd.net>

* Update list of platforms that the cookbook supports

Signed-off-by: Joseph Larionov <jlarionov@webmd.net>

* Get firewalld working in kitchen-dokken containers

Signed-off-by: Joseph Larionov <jlarionov@webmd.net>

* Fixed: firewall_rule resource fails on firewalld

The resource was specifying --zone when creating --direct rules, which
is not allowed for direct rules in firewalld.

Fixes #298

Signed-off-by: Joseph Larionov <jlarionov@webmd.net>

* Ensure firewalld service remains enabled and started when installed

Signed-off-by: Joseph Larionov <jlarionov@webmd.net>

* Fixed: New zones are created with forwarding enabled

Due to https://github.com/firewalld/firewalld/issues/1438

Signed-off-by: Joseph Larionov <jlarionov@webmd.net>

* Fixed: firewalld resources ignore properties whose value is false

Signed-off-by: Joseph Larionov <jlarionov@webmd.net>

* Test firewalld on all compatible Linux platforms

Signed-off-by: Joseph Larionov <jlarionov@webmd.net>

* Add support for firewalld 2.0.0

The firewalld_zone resource has been updated to support priority,
ingress_priority, and egress_priority zone options introduced in
firewalld 2.0.0.

As a result, this update extends support to RHEL 10, its derivatives,
and Ubuntu 24.04, all of which utilize firewalld 2.0.0 or later.

Signed-off-by: Joseph Larionov <jlarionov@webmd.net>

* Fixed ufw test when running in kitchen-dokken

Signed-off-by: Joseph Larionov <jlarionov@webmd.net>

* Disable Oracle 9 iptab

--- a/kitchen.dokken.yml
+++ b/kitchen.dokken.yml
@@ -1,7 +1,14 @@
 driver:
   name: dokken
   privileged: true
-  chef_version: <%= ENV['CHEF_VERSION'] || 'current' %>
+  # Latest Chef container (18.6.2) is broken: https://github.com/chef/chef/issues/14760
+  # chef_version: <%= ENV['CHEF_VERSION'] || 'current' %>
+  chef_version: '18.3'
+  intermediate_instructions:
+    - | # Need to set "IPv6_rpfilter=no" otherwise firewalld won't start inside Docker container
+        RUN mkdir -p /etc/firewalld && \
+            echo "DefaultZone=public" > /etc/firewalld/firewalld.conf && \
+            echo "IPv6_rpfilter=no" >> /etc/firewalld/firewalld.conf
 
 transport: { name: dokken }
 provisioner: { name: dokken }
@@ -57,12 +64,12 @@ platforms:
       image: dokken/opensuse-leap-15
       pid_one_command: /usr/lib/systemd/systemd
 
-  - name: oraclelinux-8
+  - name: oracle-8
     driver:
       image: dokken/oraclelinux-8
       pid_one_command: /usr/lib/systemd/systemd
 
-  - name: oraclelinux-9
+  - name: oracle-9
     driver:
       image: dokken/oraclelinux-9
       pid_one_command: /usr/lib/systemd/systemd
