--- a/kitchen.dokken.yml
+++ b/kitchen.dokken.yml
@@ -62,12 +62,12 @@ platforms:
       image: dokken/opensuse-leap-15
       pid_one_command: /usr/lib/systemd/systemd
 
-  - name: oracle-8
+  - name: oraclelinux-8
     driver:
       image: dokken/oraclelinux-8
       pid_one_command: /usr/lib/systemd/systemd
 
-  - name: oracle-9
+  - name: oraclelinux-9
     driver:
       image: dokken/oraclelinux-9
       pid_one_command: /usr/lib/systemd/systemd
